bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (negative==true) {
  ^