bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if (negative==false){
    if ((a<0 && b>0) || ( a>0 && b<0)){ return true }
                       else return false
                                       }
  
  if (negative==true) {
    if ((a<0 && b<0)) return true;
    else return false}
  }
